# MyAnimeStats

./: .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  TODO.md  docker-compose.yml  franchises.ipynb  import.ipynb  jikan.env.tpl  list_scrapper.ipynb  main.py  my_anime_stats.ipynb  myanimestats.ipynb  myanimestats_v2.ipynb  pyproject.toml  schedule.ipynb  script.ipynb  staff.ipynb  stats.ipynb  streamlit.toml  test.ipynb
.github/workflows/: base.yml  pylint.yml
old v1/: myanimestats.ipynb
src/: MyAnimeStats.py  actions.py  api.py  cache.py  complete_anime.py  config.py  entrypoint.sh  franchises.py  gunicorn.conf.py  import_list.py  jupyter_utils.py  load_list.py  log.py  main.py  next_releases.py  schedule.ipynb  schedule.py  staff.ipynb  staff.py  user_list.py
src/common/: actions.py  config.py  filesystem.py  franchises.py  models.py  next_releases.py  schedule.py  staff.py  user_list.py  utils.py
src/pages/: 1_Analyse.py  2_Import.py
src/static/: style.css
src/templates/: analyse.html.j2  base.html.j2  error.html.j2  home.html.j2
