[project]
name = "myanimestats"
version = "1.1.0"
description = "Explore insightful statistics about a MyAnimeList user list"
authors = [{ name = "Titouan Lacombe", email = "titouan.lacombe99@gmail.com" }]
dependencies = [
    "jupyter",
    "xmltodict",
    "dicttoxml2",
    "matplotlib",
    "unidecode",
    "seaborn",
    "scikit-learn",
    "python-dotenv",
    "pyarrow",
    "polars[plot]>=0.20.26",
    "rich>=13.7.1",
    "httpx>=0.27.0",
    "tzlocal>=5.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = []
