[project]
name = "myanimestats"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
	"pyarrow",
	"polars",
	"httpx",
	"streamlit",
	"streamlit-javascript",
	"altair",
	"pydantic",
	"pydantic-settings>=2.8.1",
]

[project.optional-dependencies]
dev = ["ipykernel"]

[tool.ruff.lint]
extend-select = [
    "UP",     # pyupgrade
    "I",      # isort
    "PERF",   # perflint
    "N",      # Naming conventions
    "FLY",    # flynt
    "PTH",    # pathlib
    "TC",     # type check
    "SIM",    # simplify
    "RET",    # return
    "FIX",    # fix & todos
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "ASYNC",  # async
    "ANN001", # Type annotations
]
